<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE layout>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.geowe</groupId>
	<artifactId>geowe</artifactId>
	<version>1.5.6</version>
	<packaging>war</packaging>
	<properties>
		<errai.dev.context>${project.artifactId}</errai.dev.context>
		<errai.jboss.home>${project.build.directory}/wildfly-8.1.0.Final</errai.jboss.home>
		<errai.version>3.0.6.Final</errai.version>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gxt.version>3.1.1</gxt.version>
		<gwt.version>2.6.1</gwt.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.errai.bom</groupId>
				<artifactId>errai-bom</artifactId>
				<version>${errai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.errai.bom</groupId>
				<artifactId>errai-version-master</artifactId>
				<version>${errai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.errai</groupId>
				<artifactId>errai-parent</artifactId>
				<version>${errai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- RESTEASY -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.jboss.resteasy</groupId> -->
<!-- 			<artifactId>resteasy-jaxrs</artifactId> -->
<!-- 			<version>3.0.6.Final</version> -->
<!-- 			<scope>runtime</scope> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>javax.ws.rs</groupId> -->
<!-- 			<artifactId>javax.ws.rs-api</artifactId> -->
<!-- 			<version>2.0.1</version> -->
<!-- 			<scope>runtime</scope> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>javax.annotation</groupId> -->
<!-- 			<artifactId>javax.annotation-api</artifactId> -->
<!-- 			<version>1.2</version> -->
<!-- 			<scope>runtime</scope> -->
<!-- 		</dependency> -->
		<!-- necesario para peticiones wms capabilities -->
		<!-- <dependency> -->
		<!-- <groupId>org.jvnet.ogc</groupId> -->
		<!-- <artifactId>wms-v_1_3_0-schema</artifactId> -->
		<!-- <version>1.1.0</version> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>org.gwtopenmaps.openlayers</groupId>
			<artifactId>gwt-openlayers-server</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
			<scope>compile</scope>
		</dependency>
		<!-- FileUpload libraries -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.3</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>com.vividsolutions</groupId>
			<artifactId>jts</artifactId>
			<version>1.13</version>
		</dependency>
		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>
		<!-- GWT and GWT Extensions -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
			<scope>compile</scope>
		</dependency>
		<!-- OpenLayers -->
		<dependency>
			<groupId>org.gwtopenmaps.openlayers</groupId>
			<artifactId>gwt-openlayers-client</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- OpenLayers -->
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt</artifactId>
			<version>${gxt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt-chart</artifactId>
			<version>${gxt.version}</version>
		</dependency>
		<!-- GXT 3.1.0+ - Neptune Theme -->
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt-theme-neptune</artifactId>
			<version>${gxt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-tools</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-jboss</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jboss-as-support</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-bus</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-ioc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-weld-integration</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-ui</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-data-binding</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-navigation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jpa-client</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>gwt-user</artifactId>
					<groupId>com.google.gwt</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jpa-datasync</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-security-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-security-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-security-picketlink</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cordova</artifactId>
		</dependency>
	</dependencies>
	<build>
		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
		<finalName>geowe</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>src/main/webapp/WEB-INF/deploy/</include>
								<include>src/main/webapp/WEB-INF/lib/</include>
								<include>src/main/webapp/WEB-INF/classes/</include>
								<include>**/gwt-unitCache/**</include>
								<include>.errai/</include>
								<include>src/main/webapp/App/</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<!-- <plugin> -->
			<!-- <artifactId>maven-compiler-plugin</artifactId> -->
			<!-- <version>2.3.2</version> -->
			<!-- <configuration> -->
			<!-- <source>1.6</source> -->
			<!-- <target>1.6</target> -->
			<!-- </configuration> -->
			<!-- </plugin> -->
			<!-- <plugin> -->
			<!-- <artifactId>maven-dependency-plugin</artifactId> -->
			<!-- <version>2.8</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <id>unpack</id> -->
			<!-- <phase>process-resources</phase> -->
			<!-- <goals> -->
			<!-- <goal>unpack</goal> -->
			<!-- </goals> -->
			<!-- <configuration> -->
			<!-- <artifactItems> -->
			<!-- <artifactItem> -->
			<!-- <groupId>org.wildfly</groupId> -->
			<!-- <artifactId>wildfly-dist</artifactId> -->
			<!-- <type>zip</type> -->
			<!-- <overWrite>false</overWrite> -->
			<!-- <version>8.1.0.Final</version> -->
			<!-- </artifactItem> -->
			<!-- </artifactItems> -->
			<!-- </configuration> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.6.1</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<logLevel>INFO</logLevel>
					<noServer>false</noServer>
					<server>org.jboss.errai.cdi.server.gwt.JBossLauncher</server>
					<disableCastChecking>true</disableCastChecking>
					<runTarget>${errai.dev.context}/index.html</runTarget>
					<soyc>false</soyc>
					<hostedWebapp>src/main/webapp</hostedWebapp>
					<extraJvmArgs>-Xmx1024m -XX:CompileThreshold=7000 </extraJvmArgs>

					<!-- -XX:MaxPermSize=128M -Derrai.jboss.home=${errai.jboss.home} -->
					<!-- -Derrai.dev.context=${errai.dev.context} -->
					<!-- -Derrai.jboss.javaagent.path=${settings.localRepository}/org/jboss/errai/errai-client-local-class-hider/${errai.version}/errai-client-local-class-hider-${errai.version}.jar</extraJvmArgs> -->

				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>jboss7</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<version>1.0.2.Final</version>
					</plugin>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.2</version>
						<configuration>
							<packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
							<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
							<warSourceDirectory>src/main/webapp</warSourceDirectory>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>javax.validation</groupId>
					<artifactId>validation-api</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-tools</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.hsqldb</groupId>
					<artifactId>hsqldb</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>de.benediktmeurer.gwt-slf4j</groupId>
					<artifactId>gwt-slf4j</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.logging</groupId>
					<artifactId>jboss-logging</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-cdi-jboss</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>javax.enterprise</groupId>
					<artifactId>cdi-api</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>javax.inject</groupId>
					<artifactId>javax.inject</artifactId>
					<!-- <scope>provided</scope> -->
				</dependency>
				<dependency>
					<groupId>javax.annotation</groupId>
					<artifactId>jsr250-api</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-codegen-gwt</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.spec.javax.interceptor</groupId>
					<artifactId>jboss-interceptors-api_1.1_spec</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-javax-enterprise</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-ui</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-data-binding</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>com.google.guava</groupId>
					<artifactId>guava-gwt</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-navigation</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.resteasy</groupId>
					<artifactId>jaxrs-api</artifactId>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-jaxrs-client</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate.common</groupId>
					<artifactId>hibernate-commons-annotations</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-core</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate.javax.persistence</groupId>
					<artifactId>hibernate-jpa-2.0-api</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-entitymanager</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-jpa-client</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.spec.javax.transaction</groupId>
					<artifactId>jboss-transaction-api_1.1_spec</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.resteasy</groupId>
					<artifactId>resteasy-cdi</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-security-client</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-cordova</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-html5</artifactId>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>mobile</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jboss.errai</groupId>
						<artifactId>cordova-maven-plugin</artifactId>
						<version>${errai.version}</version>
						<executions>
							<execution>
								<id>build</id>
								<phase>package</phase>
								<goals>
									<goal>build-project</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<source>1.6</source>
							<target>1.6</target>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
